refactor package name and security config